[gd_scene load_steps=6 format=3 uid="uid://evxa7eejwjdt"]

[ext_resource type="Script" path="res://Player/Attacks/attacks_manager.gd" id="1_66ekn"]
[ext_resource type="PackedScene" uid="uid://86woqvmxh1p5" path="res://Player/Attacks/attack_launcher.tscn" id="1_i4aj4"]
[ext_resource type="PackedScene" uid="uid://cv2tkni4hsjmu" path="res://Player/Attacks/ice_spear.tscn" id="2_ua3hf"]
[ext_resource type="PackedScene" uid="uid://ckaiyywd8hud7" path="res://Player/Attacks/tornado.tscn" id="4_r7mls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4npxh"]
radius = 367.165

[node name="AttacksManager" type="Node2D"]
script = ExtResource("1_66ekn")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_4npxh")

[node name="IceSpear" parent="." instance=ExtResource("1_i4aj4")]
attack_resource = ExtResource("2_ua3hf")
base_ammo = 3

[node name="Tornado" parent="." instance=ExtResource("1_i4aj4")]
attack_resource = ExtResource("4_r7mls")

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
